<resources>
    <string name="app_name">KidsApp</string>
    <string name="First_Background">Main Background</string>
    <string name="Start">Start</string>
    <string name="letter">Letter</string>
    <string name="number">Number</string>
    <string name="color">Color</string>
    <string name="animal">Animal</string>
    <string name="todo">TODO</string>
    <string name="A_a">A</string>
    <string name="B_b">B</string>
    <string name="C_c">C</string>
    <string name="D_d">D</string>
    <string name="E_e">E</string>
    <string name="F_f">F</string>
    <string name="G_g">G</string>
    <string name="H_h">H</string>
    <string name="I_i">I</string>
    <string name="J_j">J</string>
    <string name="K_k">K</string>
    <string name="L_l">L</string>
    <string name="M_m">M</string>
    <string name="N_n">N</string>
    <string name="O_o">O</string>
    <string name="P_p">P</string>
    <string name="Q_q">Q</string>
    <string name="R_r">R</string>
    <string name="S_s">S</string>
    <string name="T_t">T</string>
    <string name="U_u">U</string>
    <string name="V_v">V</string>
    <string name="W_w">W</string>
    <string name="X_x">X</string>
    <string name="Y_y">Y</string>
    <string name="Z_z">Z</string>
    <string name="Back">Back</string>
    <string name="Go_To_Quiz">Quiz</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_10">10</string>
    <string name="number_11">11</string>
    <string name="number_12">12</string>
    <string name="number_13">13</string>
    <string name="number_14">14</string>
    <string name="number_15">15</string>
    <string name="number_16">16</string>
    <string name="number_17">17</string>
    <string name="number_18">18</string>
    <string name="number_19">19</string>
    <string name="number_20">20</string>
    <string name="goto_tutorial">Go To Tutorial</string>
    <string name="goto_quiz">Go To Quiz</string>
    <string name="repository_link">View Repository</string>
    <string name="select_image">Select the right image of :</string>
    <string name="goto_home">Go To Home Screen</string>
    <string name="change_view">Change</string>
    <string name="main_heading">Main Heading</string>
</resources>