<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/R_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Letter"
    tools:layout_editor_absoluteX="-38dp"
    tools:layout_editor_absoluteY="-14dp">

    <Button
        android:id="@+id/A_a"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingTop="6dp"
        android:paddingRight="12dp"
        android:paddingBottom="6dp"
        android:text="@string/A_a"
        android:textSize="48sp"
        app:backgroundTint="#FA0202"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toTopOf="@+id/E_e"
        app:layout_constraintEnd_toStartOf="@+id/B_b"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/B_b"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingTop="6dp"
        android:paddingRight="12dp"
        android:paddingBottom="6dp"
        android:text="@string/B_b"
        android:textColor="#757575"
        android:textSize="48sp"
        app:backgroundTint="#EDD502"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/A_a"
        app:layout_constraintEnd_toStartOf="@+id/C_c"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/A_a"
        app:layout_constraintTop_toTopOf="@+id/A_a" />

    <Button
        android:id="@+id/C_c"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingTop="6dp"
        android:paddingRight="12dp"
        android:paddingBottom="6dp"
        android:text="@string/C_c"
        android:textColor="#546E7A"
        android:textSize="48sp"
        app:backgroundTint="#02E40B"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/B_b"
        app:layout_constraintEnd_toStartOf="@+id/D_d"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/B_b"
        app:layout_constraintTop_toTopOf="@+id/B_b"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/D_d"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingTop="6dp"
        android:paddingRight="12dp"
        android:paddingBottom="6dp"
        android:text="@string/D_d"
        android:textSize="48sp"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toTopOf="@+id/H_h"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/C_c"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/H_h"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingTop="6dp"
        android:paddingRight="12dp"
        android:paddingBottom="6dp"
        android:text="@string/H_h"
        android:textColor="#546E7A"
        android:textSize="48sp"
        app:backgroundTint="#02E40B"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toTopOf="@+id/L_l"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/G_g"
        app:layout_constraintTop_toBottomOf="@+id/D_d"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/E_e"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingTop="6dp"
        android:paddingRight="12dp"
        android:paddingBottom="6dp"
        android:text="@string/E_e"
        android:textSize="48sp"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/F_f"
        app:layout_constraintEnd_toStartOf="@+id/F_f"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/F_f" />

    <Button
        android:id="@+id/F_f"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingTop="6dp"
        android:paddingRight="12dp"
        android:paddingBottom="6dp"
        android:text="@string/F_f"
        android:textSize="48sp"
        app:backgroundTint="#FA0202"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/G_g"
        app:layout_constraintEnd_toStartOf="@+id/G_g"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/E_e"
        app:layout_constraintTop_toTopOf="@+id/G_g" />

    <Button
        android:id="@+id/G_g"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingTop="6dp"
        android:paddingRight="12dp"
        android:paddingBottom="6dp"
        android:text="@string/G_g"
        android:textColor="#757575"
        android:textSize="48sp"
        app:backgroundTint="#EDD502"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/H_h"
        app:layout_constraintEnd_toStartOf="@+id/H_h"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/F_f"
        app:layout_constraintTop_toTopOf="@+id/H_h" />

    <Button
        android:id="@+id/I_i"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingTop="6dp"
        android:paddingRight="12dp"
        android:paddingBottom="6dp"
        android:text="@string/I_i"
        android:textColor="#546E7A"
        android:textSize="48sp"
        app:backgroundTint="#02E40B"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/J_j"
        app:layout_constraintEnd_toStartOf="@+id/J_j"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/J_j"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/J_j"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingTop="6dp"
        android:paddingRight="12dp"
        android:paddingBottom="6dp"
        android:text="@string/J_j"
        android:textSize="48sp"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/K_k"
        app:layout_constraintEnd_toStartOf="@+id/K_k"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/I_i"
        app:layout_constraintTop_toTopOf="@+id/K_k" />

    <Button
        android:id="@+id/K_k"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingTop="6dp"
        android:paddingRight="12dp"
        android:paddingBottom="6dp"
        android:text="@string/K_k"
        android:textSize="48sp"
        app:backgroundTint="#FA0202"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/L_l"
        app:layout_constraintEnd_toStartOf="@+id/L_l"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/J_j"
        app:layout_constraintTop_toTopOf="@+id/L_l" />

    <Button
        android:id="@+id/L_l"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingTop="6dp"
        android:paddingRight="12dp"
        android:paddingBottom="6dp"
        android:text="@string/L_l"
        android:textColor="#757575"
        android:textSize="48sp"
        app:backgroundTint="#EDD502"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toTopOf="@+id/P_p"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/K_k"
        app:layout_constraintTop_toBottomOf="@+id/H_h"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/M_m"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingTop="6dp"
        android:paddingRight="12dp"
        android:paddingBottom="6dp"
        android:text="@string/M_m"
        android:textColor="#757575"
        android:textSize="48sp"
        app:backgroundTint="#EDD502"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/N_n"
        app:layout_constraintEnd_toStartOf="@+id/N_n"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/N_n" />

    <Button
        android:id="@+id/N_n"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingTop="6dp"
        android:paddingRight="12dp"
        android:paddingBottom="6dp"
        android:text="@string/N_n"
        android:textColor="#546E7A"
        android:textSize="48sp"
        app:backgroundTint="#02E40B"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/O_o"
        app:layout_constraintEnd_toStartOf="@+id/O_o"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/M_m"
        app:layout_constraintTop_toTopOf="@+id/O_o"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/O_o"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingTop="6dp"
        android:paddingRight="12dp"
        android:paddingBottom="6dp"
        android:text="@string/O_o"
        android:textSize="48sp"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/P_p"
        app:layout_constraintEnd_toStartOf="@+id/P_p"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/N_n"
        app:layout_constraintTop_toTopOf="@+id/P_p" />

    <Button
        android:id="@+id/P_p"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingTop="6dp"
        android:paddingRight="12dp"
        android:paddingBottom="6dp"
        android:text="@string/P_p"
        android:textSize="48sp"
        app:backgroundTint="#FA0202"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toTopOf="@+id/T_t"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/O_o"
        app:layout_constraintTop_toBottomOf="@+id/L_l" />

    <Button
        android:id="@+id/Q_q"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingTop="6dp"
        android:paddingRight="12dp"
        android:paddingBottom="6dp"
        android:text="@string/Q_q"
        android:textSize="48sp"
        app:backgroundTint="#FA0202"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/R_r"
        app:layout_constraintEnd_toStartOf="@+id/R_r"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/R_r"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/R_r"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingTop="6dp"
        android:paddingRight="12dp"
        android:paddingBottom="6dp"
        android:text="@string/R_r"
        android:textColor="#757575"
        android:textSize="48sp"
        app:backgroundTint="#EDD502"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/S_s"
        app:layout_constraintEnd_toStartOf="@+id/S_s"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Q_q"
        app:layout_constraintTop_toTopOf="@+id/S_s"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/S_s"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingTop="6dp"
        android:paddingRight="12dp"
        android:paddingBottom="6dp"
        android:text="@string/S_s"
        android:textColor="#546E7A"
        android:textSize="48sp"
        app:backgroundTint="#02E40B"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/T_t"
        app:layout_constraintEnd_toStartOf="@+id/T_t"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/R_r"
        app:layout_constraintTop_toTopOf="@+id/T_t"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/T_t"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingTop="6dp"
        android:paddingRight="12dp"
        android:paddingBottom="6dp"
        android:text="@string/T_t"
        android:textSize="48sp"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toTopOf="@+id/X_x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/S_s"
        app:layout_constraintTop_toBottomOf="@+id/P_p" />

    <Button
        android:id="@+id/U_u"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingTop="6dp"
        android:paddingRight="12dp"
        android:paddingBottom="6dp"
        android:text="@string/U_u"
        android:textSize="48sp"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/V_v"
        app:layout_constraintEnd_toStartOf="@+id/V_v"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/V_v"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/V_v"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingTop="6dp"
        android:paddingRight="12dp"
        android:paddingBottom="6dp"
        android:text="@string/V_v"
        android:textSize="48sp"
        app:backgroundTint="#FA0202"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/W_w"
        app:layout_constraintEnd_toStartOf="@+id/W_w"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/U_u"
        app:layout_constraintTop_toTopOf="@+id/W_w" />

    <Button
        android:id="@+id/W_w"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingTop="6dp"
        android:paddingRight="12dp"
        android:paddingBottom="6dp"
        android:text="@string/W_w"
        android:textColor="#757575"
        android:textSize="48sp"
        app:backgroundTint="#EDD502"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/X_x"
        app:layout_constraintEnd_toStartOf="@+id/X_x"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/V_v"
        app:layout_constraintTop_toTopOf="@+id/X_x" />

    <Button
        android:id="@+id/X_x"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingTop="6dp"
        android:paddingRight="12dp"
        android:paddingBottom="6dp"
        android:text="@string/X_x"
        android:textColor="#546E7A"
        android:textSize="48sp"
        app:backgroundTint="#02E40B"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toTopOf="@+id/Z_z"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/W_w"
        app:layout_constraintTop_toBottomOf="@+id/T_t"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/Y_y"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingTop="6dp"
        android:paddingRight="12dp"
        android:paddingBottom="6dp"
        android:text="@string/Y_y"
        android:textSize="48sp"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/V_v"
        app:layout_constraintStart_toStartOf="@+id/V_v"
        app:layout_constraintTop_toBottomOf="@+id/U_u" />

    <Button
        android:id="@+id/Z_z"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingTop="6dp"
        android:paddingRight="12dp"
        android:paddingBottom="6dp"
        android:text="@string/Z_z"
        android:textSize="48sp"
        app:backgroundTint="#FA0202"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/W_w"
        app:layout_constraintStart_toStartOf="@+id/W_w"
        app:layout_constraintTop_toBottomOf="@+id/X_x"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#0E0E0E"
        android:text="@string/Back"
        android:textColor="#D3D1D1"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:backgroundTint="#0B0A0A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Y_y"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/U_u" />

    <Button
        android:id="@+id/Quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#0C0C0C"
        android:text="@string/Go_To_Quiz"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:backgroundTint="#ACA9A9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Z_z"
        app:layout_constraintTop_toBottomOf="@+id/X_x"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
